fixed text overflow for tablet view

--- a/src/app/public/public.component.less
+++ b/src/app/public/public.component.less
@@ -202,7 +202,7 @@
 @media (min-width: 768px) {
   .favorite {
     &__text {
-      height: 70px;
+      height: 60px;
     }
   }
 }
@@ -256,5 +256,11 @@
 @media (min-width: 1024px) {
   .navbar__wrapper {
     padding: 0 40px;
+  }
+
+  .favorite {
+    &__text {
+      height: 70px;
+    }
   }
 }
